--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body{
   margin-top: 1%;
   line-height: 40px;
   font-size: 19px;
+  text-align: center;
 }
 h1{
   margin-bottom: 30px;
@@ -79,4 +80,44 @@ form input[type="submit"]:hover {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+.new-game-btn {
+  background-color: #28a745; /* Green */
+  color: white;
+  padding: 10px 20px;
+  font-size: 18px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  display: inline-block;
+  margin-top: 15px;
+}
+
+.new-game-btn:hover {
+  background-color: #218838; /* Darker green */
+}
+
+.prev-guess {
+  color: purple;
+  font-weight: bold;
+}
+.lastResult {
+  color: red;
+  font-size: 18px;
+  font-weight: bold;
+}
+.new-game-btn button {
+  background-color: #28a745; /* Green */
+  color: white;
+  padding: 5px 5px;
+  font-size: 18px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  display: inline-block;
+  margin-top: 8px;
+}
+
+.new-game-btn button:hover {
+  background-color: #218838; /* Darker green on hover */
 }
